src/css/styles.css
body {
    color:rgb(47, 255, 75);
    background-color: lightgray;
    font-family: 'Noto Sans JP', sans-serif;
}
hr {
    border-color: rgb(38, 194, 59);
}
/*styles for copyright and footer*/
footer {
    
    background-color:#343a40;
    width: 100%;
    position: fixed;
    bottom: 0;
}
.copyright-text h2{
    padding-top:5px;
    padding-bottom: 5px;
    font-size: 16px;
    position: relative;
    text-align: center;
}
.copyright-buffer {
    width: 100%;
    position: relative;
    top:-6px;
    padding:3px ;
    background-color:rgb(38, 194, 59);
}
/*Styles in the navbar header*/
.navbar-brand {
    font-family: 'Noto Sans JP', sans-serif;
    background-color:green;
    padding-left: 2px;
    padding-right: 2px;
    font-weight: 700;
    color:black;
}

/* Adds style for all content boxes in project*/
.infoBox {
    background-color: #343a40;
    margin-top: 90px;
    padding-top: 30px;
    padding-bottom: 30px;
    margin-bottom: 90px;
    margin-left:10px;
}
.infoBox-row {
    margin-left: 20px;
    margin-right: 20px;

}
/*style of the image in the about-me section*/
.about-image{
    height:150px;
    width:150px;
    float: left;
    margin-right: 30px;
    margin-bottom: 10px;
}
/*margins for the images in portfolio*/
.portfolio-image {
    margin-bottom: 10px;
   
}
.portfolio-image img {
    width: 350px;
    height: 350px;
}

